--- a/app/src/main/res/layout/head_view.xml
+++ b/app/src/main/res/layout/head_view.xml
@@ -26,5 +26,15 @@
         android:textColor="#ff000000"
         android:textSize="16sp" />
 
+    <TextView
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:paddingRight="10dp"
+        android:text="服务中"
+        android:textColor="#ff000000"
+        android:textSize="12sp" />
 
 </RelativeLayout>
