网络请求框架搭建

--- a/app/src/main/res/drawable/button_check_selector.xml
+++ b/app/src/main/res/drawable/button_check_selector.xml
@@ -3,4 +3,5 @@
     <item android:drawable="@color/appColor" android:state_focused="true" />
     <item android:drawable="@color/appColor" android:state_checked="true" />
     <item android:drawable="@color/appColor" android:state_pressed="true" />
+    <item android:drawable="@color/fff" android:state_focused="false" />
 </selector>
