--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FEE600</color>
     <color name="colorPrimaryDark">#FEE600</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="fff">#fff</color>
 
 
 
