--- a/app/src/main/res/layout/activity_bill_list.xml
+++ b/app/src/main/res/layout/activity_bill_list.xml
@@ -28,21 +28,23 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/v_date1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/button_background_h"
                 android:gravity="center"
-                android:paddingLeft="5dp"
+                android:paddingLeft="7dp"
                 android:paddingTop="2dp"
-                android:paddingRight="5dp"
+                android:paddingRight="7dp"
                 android:paddingBottom="2dp"
                 android:text="2018-12-02"
                 android:textColor="#666"
-                android:textSize="10sp" />
+                android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/iv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_calendar" />
@@ -63,21 +65,23 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/v_date2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/button_background_h"
                 android:gravity="center"
-                android:paddingLeft="5dp"
+                android:paddingLeft="7dp"
                 android:paddingTop="2dp"
-                android:paddingRight="5dp"
+                android:paddingRight="7dp"
                 android:paddingBottom="2dp"
                 android:text="2018-12-02"
                 android:textColor="#666"
-                android:textSize="10sp" />
+                android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/iv2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_calendar" />
@@ -91,38 +95,92 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv1"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="10dp"
                 android:text="今日"
                 android:textColor="#ff000000"
                 android:textSize="12sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="￥"
-                android:textColor="#ff000000"
-                android:textSize="10sp" />
+                android:layout_below="@id/tv1"
+                android:layout_toRightOf="@id/tv1"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:text="2000.00"
-                android:textColor="#ff000000"
-                android:textSize="20sp" />
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="收入"
+                        android:textColor="#ff000000"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="￥"
+                        android:textColor="#ff000000"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_money1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="0.00"
+                        android:textColor="#ff000000"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="支出"
+                        android:textColor="#ff000000"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="￥"
+                        android:textColor="#ff000000"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_money2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="0.00"
+                        android:textColor="#ff000000"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <View
             android:layout_width="0.1dp"
@@ -131,38 +189,93 @@
             android:background="#d9d9d9"
             android:paddingTop="20dp" />
 
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv2"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="10dp"
                 android:text="本月"
                 android:textColor="#ff000000"
                 android:textSize="12sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="￥"
-                android:textColor="#ff000000"
-                android:textSize="10sp" />
+                android:layout_below="@id/tv2"
+                android:layout_toRightOf="@id/tv2"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:text="200.00"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                android:textColor="#ff000000"
-                android:textSize="20sp" />
-        </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="收入"
+                        android:textColor="#ff000000"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="￥"
+                        android:textColor="#ff000000"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_money3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="0.00"
+                        android:textColor="#ff000000"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="支出"
+                        android:textColor="#ff000000"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="￥"
+                        android:textColor="#ff000000"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_money4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="0.00"
+                        android:textColor="#ff000000"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
     </LinearLayout>
 
 
