--- a/app/src/main/res/layout/activity_bill_list_item.xml
+++ b/app/src/main/res/layout/activity_bill_list_item.xml
@@ -12,17 +12,6 @@
         android:background="#fff"
         android:orientation="vertical"
         android:padding="10dp">
-
-
-        <TextView
-            android:id="@+id/tv_plate_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="粤A78397"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,6 +31,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
                     android:text="订单号："
+                    android:textColor="#FF000000"
                     android:textSize="12sp" />
 
                 <TextView
@@ -67,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
-                    android:text="未申请"
+                    android:text="收入"
                     android:textColor="#FFF23325"
                     android:textSize="12sp" />
 
@@ -77,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:text="¥200.00"
                     android:textColor="#ff000000"
-                    android:textSize="12sp" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
