--- a/app/src/main/res/layout/activity_make_order.xml
+++ b/app/src/main/res/layout/activity_make_order.xml
@@ -36,19 +36,32 @@
                 android:orientation="horizontal"
                 android:padding="10dp">
 
-                <CheckedTextView
+                <LinearLayout
                     android:id="@+id/bto_top1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/button_check_selector"
-                    android:drawableTop="@mipmap/icon_xiche"
-                    android:drawablePadding="10dp"
-                    android:gravity="center_vertical"
-                    android:padding="15dp"
-                    android:text="洗车"
-                    android:textColor="#ff000000"
-                    android:textSize="14sp" />
+                    android:background="#fff"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp">
+
+                    <ImageView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/icon_xiche" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="洗车"
+                        android:textColor="#ff000000"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
 
                 <View
                     android:layout_width="10dp"
