--- a/app/src/main/res/layout/activity_my_balance.xml
+++ b/app/src/main/res/layout/activity_my_balance.xml
@@ -35,13 +35,16 @@
             android:textSize="12sp" />
 
         <TextView
+
+            android:id="@+id/tv_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¥2000.00"
+            android:text="¥"
             android:textColor="#ff000000"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/tv_action_applied"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -70,11 +73,12 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_in_applied"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="2000.00元"
+            android:text="元"
             android:textColor="#ff000000"
             android:textSize="14sp" />
 
@@ -97,21 +101,23 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_forward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="0.00元"
+            android:text="元"
             android:textColor="#ff000000"
             android:textSize="14sp" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_bill_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="#fff"
+        android:background="@drawable/button_check_selector"
         android:padding="15dp">
 
 
